Fix: Social footer center on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -12,6 +12,7 @@ body {
     color: $text-color-dark;
     font-family: "Nunito", sans-serif;
     margin: 0;
+    padding: 0
 }
 
 
@@ -84,18 +85,19 @@ a:hover {
 
 
 #social {
-    position: fixed;
+    position:fixed;
+    left: 0px;
+    bottom: 0px;
     width: 100%;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
     text-align: center;
     background-color: $background-color-dark;
+    padding-top: 1rem;
+    padding-bottom: 0.8rem;
 
     a {
         color: $highlight-color;
         text-decoration: none;
-        margin: 0 1.5rem;
+        margin: 1.5rem;
     }
 }
 
